<resources>
    <string name="sucess_Cad">Cadastro realizado com sucesso</string>
    <string name="negative_Cad">Não foi possivel concluir seu cadastro </string>
    <string name="app_name">Gestante</string>
    <string name="titulo">APP GESTANTE</string>
    <string name="cad">Não possui cadastro?</string>
    <string name="btnContinuar">CONTINUAR</string>
    <string name="btnCad">CADASTRAR</string>
    <string name="btnFechar">Fechar</string>
    <string name="slcGestante">Gestante</string>
    <string name="slcMedico">Médico</string>
    <string name="txtAlert">Selecione o tipo de cadastro que deseja fazer...</string>
    <string name="recupera_senha">Esqueci minha senha?</string>
    <string name="logar">Logar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cad_medico">CadMedico</string>

    <string name="data_person">Dados pessoais</string>
    <string name="data_Endereco">Endereço</string>
    <string name="camera">Foto</string>
    <string name="reg_medico">Registro Medico</string>
    <string name="frase_reset">Informe seu E-mail para redefinir sua senha.</string>
    <string name="reset_senha">Enviar E-mail</string>
    <string name="email">E-mail</string>
    <string name="crm">CRM</string>
    <string name="nasc">Data Nascimento</string>
    <string name="novSenha">Nova Senha</string>
    <string name="confSenha">Confirma Senha</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="sexo">Sexo</string>
    <string name="sangue">Tipo sanguínio</string>

    <string-array name="tiposangue">
        <item>A+</item>
        <item>A-</item>
        <item>O+</item>
        <item>O-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="cpf">CPF</string>
    <string name="phone">Celular</string>
    <string name="fraseEnd">Para seu conforto e seguraça</string>
    <string name="cep">CEP:</string>
    <string name="rua">Rua:</string>
    <string name="complemento">Complemento:</string>
    <string name="num">Nª:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>


    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>
    <string name="titleConc">Termo do app</string>
    <string name="contexTermo">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,remaining essentially unchanged. It was popularised in the 1960s with the release of
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,remaining essentially unchanged. It was popularised in the 1960s with the release of
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,remaining essentially unchanged. It was popularised in the 1960s with the release of
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="aceita_termo">Aceito termos de uso</string>
    <string name="concluir">Concluir</string>
    <string name="psw_sucess">E-mail enviado com sucesso</string>
    <string name="psw_negative">E-mail errado ou não cadastrado</string>
    <string name="chat">Chat</string>
    <string name="location_hospital">Localização Hospital</string>
    <string name="agendar_consulta">Agendar consulta</string>
    <string name="agendar_vacina">Agendar Vacina</string>
    <string name="data_previl_nasc_bebe">Data prevista para nascimento do bebê</string>
    <string name="tipo_sangu_nio">Tipo sanguínio</string>
    <string name="_33_anos">33 anos</string>
    <string name="idade">Idade</string>
    <string name="nome_pessoa">Maria Lima</string>
    <string name="tipo_sangue">A+</string>
    <string name="marcar">Marcar</string>
    <string name="cancelar">Cancelar</string>
    <string name="marca_consulta">Marca Consulta</string>
    <string name="marca_vacina">Marca vacina</string>
    <string name="tipo_vacina">Tipo vacina:</string>

    <string-array name="vacinas">
        <item>Vacina contra a gripe</item>
        <item>vacina contra a difteria</item>
        <item>vacina antitetânica</item>
    </string-array>
    <string name="title_activity_localizacao">Map</string>
    <string name="wifinegado">Não foi possivel Estabelecer conexão.Verifique se está com WI-FI ligado ou DADOS MOVEIS.</string>
    <string name="teste">Parabéns ja está terminando cadastro, so mais alguns passos:</string>
    <string name="teste1">- Foto</string>
    <string name="teste2">- Email</string>
    <string name="teste3">- Senha:deve conter minimo 6 caracteres, incluindo letra e numeros e caracteres especiais</string>


    //mensagem de erro
    <string name="msg_erro_nome">Campo Obrigatorio</string>
    <string name="msg_erro_dataNasc">data esta incorreta ou incompleta</string>
    <string name="msg_erro_cpf">CPF esta incorreta ou incompleta</string>
    <string name="msg_erro_celular">Celualr esta incorreta ou incompleta</string>
    <string name="salvar">Salvar</string>
    <string name="ultimo_ciclo">ultimo ciclo</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
