<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAlert"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@android:color/black"/>

    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:button="@drawable/custom_radio_button"
        android:id="@+id/groupSelect">
        <RadioButton
            android:layout_marginTop="5dp"
            android:id="@+id/rbGestante"
            android:theme="@style/MyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/slcGestante"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbMedico"
            android:theme="@style/MyRadioButton"
            android:layout_below="@id/rbGestante"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/slcMedico"
            android:textStyle="bold"/>
    </RadioGroup>


    <Button
        android:id="@+id/btnFechar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/groupSelect"
        android:layout_weight="1"
        android:background="@drawable/btnfechar"
        android:text="@string/btnFechar"
        android:textColor="@color/branca"
        android:textStyle="bold" />
</RelativeLayout>
