<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.italo.gestante.Termos">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbrar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titleConc"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contexTermo"
                android:textColor="@android:color/black"
                android:gravity="start"/>

            <CheckBox
                android:id="@+id/ckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aceita_termo"
                android:textColor="@android:color/black"
                android:theme="@style/MyCheckBox" />
            <Button
                android:id="@+id/btncheckTermos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnContinuar"
                android:background="@drawable/btn_custon"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
