<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_principal"
    tools:context="com.example.italo.gestante.Reset_Password_Gestante">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbrar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frase_reset"
                android:textColor="@color/branca"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_dataNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/nasc"
                    android:inputType="datetime"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_NovaSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/novSenha"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/reset_ConfSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#cccccc">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/branca"
                    android:hint="@string/confSenha"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:textColor="@color/branca" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnconfTrocaSenhaGt"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_custon"
                android:textColor="@color/branca"
                android:textStyle="bold"
                android:text="@string/reset_senha"
                />





        </LinearLayout>
    </ScrollView>
</RelativeLayout>
