<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.italo.gestante.Principal">

    <include
        android:id="@+id/toolbarPrincipal"
        layout="@layout/toollbar_principal"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/idade" />

    <ImageView
        android:id="@+id/imgFundo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbarPrincipal"
        android:scaleType="fitXY"
        android:src="@drawable/fundo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:src="@drawable/pregnancy" />
   <TextView
       android:layout_marginTop="5dp"
       android:layout_below="@+id/img"
       android:textColor="@android:color/black"
       android:textAlignment="center"
       android:textStyle="bold"
       android:textSize="15sp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="@string/nome_pessoa"/>

    <TextView
        android:id="@+id/idade"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="73dp"
        android:text="@string/idade"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
   <TextView
       android:layout_marginTop="5sp"
       android:layout_below="@+id/idade"
       android:layout_marginLeft="120dp"
       android:layout_alignLeft="@+id/img"
       android:textColor="@android:color/black"
       android:textAlignment="center"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/_33_anos"/>

    <TextView
        android:id="@+id/sangue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/idade"
        android:layout_marginStart="20dp"
        android:text="@string/tipo_sangu_nio"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
   <TextView
       android:layout_marginTop="5sp"
       android:layout_below="@+id/sangue"
       android:layout_marginLeft="20dp"
       android:layout_alignParentRight="@+id/img"
       android:textColor="@android:color/holo_red_light"
       android:textAlignment="center"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/tipo_sangue"
       android:textStyle="bold"
       android:textSize="20sp"/>
   <LinearLayout
       android:id="@+id/linear"
       android:layout_below="@+id/imgFundo"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

      <android.support.design.widget.TabLayout
          android:id="@+id/stl_label"
          style="@style/MyCustomTabLayoutPrincipal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/linear"
          android:padding="3dp"
          app:tabGravity="fill"
          app:tabMaxWidth="0dp"
          app:tabMode="fixed">
      </android.support.design.widget.TabLayout>
      <android.support.v4.view.ViewPager
          android:id="@+id/vp_conteudo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/stl_label"
          android:padding="10dp">
      </android.support.v4.view.ViewPager>

   </LinearLayout>

</RelativeLayout>
