<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gestante"
    tools:context="com.example.italo.gestante.CadGestante">

    <include android:id="@+id/toolbar"
    layout="@layout/toolbrar"/>


    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:layout_marginTop="100dp"
                android:id="@+id/btnTermos"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_custon_doctor"
                android:textColor="@color/white"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleConc"
                android:textStyle="bold"
                />
            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btnDatagestante"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:background="@drawable/btn_custon_doctor"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_person"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnfinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_verde"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/concluir"
                android:textColor="@color/white"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>
